Updated swagger and controllers
