# __documentation__/old-swagger-output.json
@@ -328,82 +328,7 @@
         }
       },
       "required": ["carTravel", "publicTransport", "flight", "motorBike", "treeEquivalent", "grade"]
-    },
-    "Post": {
-        "type": "object",
-        "properties": {
-          "postKey": {
-            "type": "string",
-            "example": "1234567890"
-          },
-          "title": {
-            "type": "string",
-            "example": "Delicious Pancake Recipe"
-          },
-          "recipeImage": {
-            "type": "string",
-            "format": "uri",
-            "example": "http://example.com/image.jpg"
-          },
-          "username": {
-            "type": "string",
-            "example": "john_doe"
-          },
-          "userId": {
-            "type": "integer",
-            "example": 1
-          },
-          "profilePicture": {
-            "type": "string",
-            "format": "uri",
-            "example": "http://example.com/profile.jpg"
-          },
-          "instructions": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "ingredients": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "equipment": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "likes": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "comments": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "commentId": {
-                  "type": "integer",
-                  "example": 1
-                },
-                "commentText": {
-                  "type": "string",
-                  "example": "Great recipe!"
-                },
-                "commenterId": {
-                  "type": "integer",
-                  "example": 2
-                }
-              }
-            }
-          }
-        }
-      }
+    }
   }
 }
 
